--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Wedding JM New</string>
+    <string name="app_name">Wedding App</string>
     <string name="typeface_bold_font">RainbowBridgePersonalUse.ttf</string>
 </resources>
